# Centiloid-pipeline

./: Dockerfile.devcontainer  LICENSE  Makefile  README.md  app.py  centiloid_easy.py  centiloid_pipeline.py  ci.yml  devcontainer.json  generate_synthetic_data.py  nightly.yml  pyproject.toml  radiomics_model_train.py  release.yml  requirements.txt  run_end_to_end.py  settings.json
.github/workflows/: docker-image.yml
