[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "centiloid-pipeline"
version = "1.0.0"
description = "Amyloid PET Centiloid pipeline with CT/MRI, ARIA, radiomics"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
centiloid-pipeline = "centiloid_pipeline:main"
radiomics-train = "radiomics_model_train:main"
radiomics-predict = "radiomics_model_predict:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
